Fixed portfolios layout issue

--- a/src/Styles/Layout.scss
+++ b/src/Styles/Layout.scss
@@ -64,7 +64,7 @@
     .content
     {
       margin-top: 5rem;
-      margin-bottom: 5rem;
+      margin-bottom: 10rem;
       width: 80%;
       margin-left: 10%;
     }
