--- a/src/Styles/PortfolioPage.scss
+++ b/src/Styles/PortfolioPage.scss
@@ -6,11 +6,12 @@
 
 .portfolio-menu
 {
+  margin-top: 4rem;
   .Categories
   {
     position: relative;
     display: flex;
-    justify-content: center;
+    justify-content: left;
     align-items: center;
     width: 50%;
     flex-wrap: wrap;
